# products-cli-validator

./: .gitignore  README.md  pyproject.toml  validate.py
submissions/: .gitkeep
tests/: conftest.py  test_batch_update.py  test_bonus_error_hygiene.py  test_bonus_input_validation.py  test_bonus_network_resilience.py  test_create_delete.py  test_login.py  test_performance.py  test_preemptive_refresh.py  test_products_get_update.py  test_products_list.py  test_refresh.py
